# LivingScreen

./: README.md  README.zh-CN.md  agent.py  app.py  env.py  llms.py  main_threaded.py  pyproject.toml  utils.py
data/: close_end_application.json  cross_source_understanding.json  gui_action.json
static/: script.js  style.css
templates/: index.html
