[project]
name = "living-screen-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "imageio>=2.35.0",
    "imageio-ffmpeg>=0.5.1",
    "jieba>=0.42.1",
    "matplotlib>=3.10.9",
    "nest-asyncio>=1.6.0",
    "openai>=2.31.0",
    "opencv-python>=4.10.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "volcengine-python-sdk>=5.0.9",
    "wordcloud>=1.9.6",
]
